# pkgsite-tools

./: Cargo.toml  build.rs  install-assets.sh  types.txt
completions/: _pkgsite  _pkgsite.ps1  pkgsite.bash  pkgsite.elv  pkgsite.fish
pkgsite-lib/: Cargo.toml
pkgsite-lib/src/: error.rs  lib.rs
pkgsite-lib/src/models/: depends.rs  files.rs  index.rs  info.rs  mod.rs  rdepends.rs  search.rs  updates.rs
src/: cli.rs  lib.rs  main.rs
src/models/: index.rs  info.rs  search.rs
src/views/: depends.rs  files.rs  index.rs  info.rs  mod.rs  rdepends.rs  search.rs  updates.rs
