[package]
name = "pkgsite-tools"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["Kaiyang Wu <origincode@aosc.io>"]
description = "Get package information from packages.aosc.io"
repository = "https://github.com/AOSC-Dev/pkgsite-tools"
homepage = "https://github.com/AOSC-Dev/pkgsite-tools"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
itertools = "0.14"
console = "0.15"
regex = "1.11"
html-escape = "0.2"
time = { version = "0.3", features = ["formatting"] }
tabled = { version = "0.19", features = ["ansi"] }
nyquest-preset = { version = "0.1", features = ["async"], optional = true }
pkgsite-lib = { path = "./pkgsite-lib", default-features = false }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[[bin]]
name = "pkgsite"
path = "src/main.rs"

[features]
default = ["pkgsite-lib/default"]
nyquest = ["pkgsite-lib/nyquest", "dep:nyquest-preset"]

[workspace]
members = ["pkgsite-lib"]
