[package]
name = "pkgsite-lib"
version = "0.10.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
nyquest = { version = "0.1", features = ["json", "async"], optional = true }
thiserror = "2.0"

[dev-dependencies]
nyquest-preset = { version = "0.1", features = ["async"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
nyquest = ["dep:nyquest"]
