[package]
name = "pkgsite-lib"
version = "0.11.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"], optional = true }
nyquest = { version = "0.4", features = ["json", "async"], optional = true }
thiserror = "2.0"

[dev-dependencies]
nyquest-preset = { version = "0.4", features = ["async"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
nyquest = ["dep:nyquest"]
